--- a/book-service/build.gradle
+++ b/book-service/build.gradle
@@ -12,6 +12,7 @@ jar {
 }
 
 bootJar {
+	launchScript()
 	enabled = true
 }
 
@@ -37,6 +38,7 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.postgresql:postgresql'
 	/*implementation 'org.springframework.boot:spring-boot-starter-data-rest'*/
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
