--- a/customer-service/build.gradle
+++ b/customer-service/build.gradle
@@ -7,6 +7,15 @@ plugins {
 group = 'org.afa'
 version = '0.0.1-SNAPSHOT'
 
+jar {
+	enabled = false
+}
+
+bootJar {
+	launchScript()
+	enabled = true
+}
+
 java {
 	toolchain {
 		languageVersion = JavaLanguageVersion.of(17)
@@ -29,6 +38,7 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.postgresql:postgresql'
 	/*implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-hateoas'*/
 	implementation 'org.springframework.boot:spring-boot-starter-web'
